[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/silicon.util.gdnative_helper/library_manager/library_manager.gd" type="Script" id=1]
[ext_resource path="res://addons/silicon.util.gdnative_helper/library_manager/create_class.gd" type="Script" id=2]
[ext_resource path="res://addons/silicon.util.gdnative_helper/library_manager/create_library.gd" type="Script" id=3]
[ext_resource path="res://addons/silicon.util.gdnative_helper/library_manager/build_library.gd" type="Script" id=4]
[ext_resource path="res://addons/silicon.util.gdnative_helper/platform_logos/android.png" type="Texture" id=5]
[ext_resource path="res://addons/silicon.util.gdnative_helper/platform_logos/linux.png" type="Texture" id=6]
[ext_resource path="res://addons/silicon.util.gdnative_helper/platform_logos/ios.png" type="Texture" id=7]
[ext_resource path="res://addons/silicon.util.gdnative_helper/platform_logos/mac_osx.png" type="Texture" id=8]
[ext_resource path="res://addons/silicon.util.gdnative_helper/platform_logos/windows.png" type="Texture" id=9]
[ext_resource path="res://addons/silicon.util.gdnative_helper/utils/file_edit.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/silicon.util.gdnative_helper/library_manager/error_logs.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.3024, 0.32616, 0.38952, 1.2 )
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 230 )
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 745.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Solution: native_solution.gdnsln"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Config" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 749.0
margin_right = 845.0
margin_bottom = 20.0
text = "Configuration"

[node name="Build" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 849.0
margin_right = 941.0
margin_bottom = 20.0
text = "Build Library"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 945.0
margin_right = 949.0
margin_bottom = 20.0

[node name="Log" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 953.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Build Log"

[node name="Reload" type="ToolButton" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 916.0
margin_right = 928.0
margin_bottom = 40.0
hint_tooltip = "Refreshes the library list below."

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="VBoxContainer/HSplitContainer"]
margin_right = 506.0
margin_bottom = 576.0
size_flags_horizontal = 3
allow_reselect = true
allow_rmb_select = true
hide_root = true

[node name="BuildIconUpdate" type="Timer" parent="VBoxContainer/HSplitContainer/Tree"]
wait_time = 0.125
autostart = true

[node name="PopupOpts" type="PopupMenu" parent="VBoxContainer/HSplitContainer/Tree"]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Create Library", null, 0, false, false, 0, 0, null, "", false, "Create Class", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Open Source File", null, 0, false, false, 3, 0, null, "", false, "Open Header File", null, 0, false, false, 4, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Build Options...", null, 0, false, false, 6, 0, null, "", false, "Build", null, 0, false, false, 7, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Delete", null, 0, false, false, 9, 0, null, "", false ]

[node name="CreateLib" type="Button" parent="VBoxContainer/HSplitContainer"]
visible = false
margin_left = 699.0
margin_top = 268.0
margin_right = 831.0
margin_bottom = 288.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Create New Library"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLogs" type="Tree" parent="VBoxContainer/HSplitContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
hide_root = true
script = ExtResource( 11 )

[node name="CreateLibraryDialog" type="ConfirmationDialog" parent="."]
margin_left = 186.0
margin_top = 145.0
margin_right = 475.0
margin_bottom = 309.0
window_title = "Create Library"
resizable = true
script = ExtResource( 3 )

[node name="Container" type="VBoxContainer" parent="CreateLibraryDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Language" type="HBoxContainer" parent="CreateLibraryDialog/Container"]
margin_right = 315.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CreateLibraryDialog/Container/Language"]
margin_top = 3.0
margin_right = 103.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Language: "

[node name="OptionButton" type="OptionButton" parent="CreateLibraryDialog/Container/Language"]
margin_left = 107.0
margin_right = 315.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "C++"
items = [ "C", null, false, 0, null, "C++", null, false, 1, null ]
selected = 1

[node name="Path" type="HBoxContainer" parent="CreateLibraryDialog/Container"]
margin_top = 26.0
margin_right = 315.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CreateLibraryDialog/Container/Path"]
margin_top = 5.0
margin_right = 103.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Path: "

[node name="FileEdit" parent="CreateLibraryDialog/Container/Path" instance=ExtResource( 10 )]
margin_left = 107.0
margin_right = 315.0
size_flags_horizontal = 3
path = "res://Library.gdnlib"
mode = 4
file_dialog = NodePath("../../../FileDialog")

[node name="Config" type="RichTextLabel" parent="CreateLibraryDialog/Container"]
margin_top = 56.0
margin_right = 315.0
margin_bottom = 130.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=#44FF44]- Library path/name is valid.[/color]
"
text = "- Library path/name is valid.
"

[node name="FileDialog" type="FileDialog" parent="CreateLibraryDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 323.0
margin_bottom = 138.0
window_title = "Choose Location"
resizable = true
filters = PoolStringArray( "*.gdnlib ; GDNative Libraries" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateClassDialog" type="ConfirmationDialog" parent="."]
margin_right = 305.0
margin_bottom = 179.0
window_title = "Create Class"
resizable = true
script = ExtResource( 2 )

[node name="Container" type="VBoxContainer" parent="CreateClassDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inherit" type="HBoxContainer" parent="CreateClassDialog/Container"]
margin_right = 315.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="CreateClassDialog/Container/Inherit"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.31
text = "Inherits: "

[node name="LineEdit" type="LineEdit" parent="CreateClassDialog/Container/Inherit"]
margin_left = 77.0
margin_right = 315.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Node"

[node name="Name" type="HBoxContainer" parent="CreateClassDialog/Container"]
margin_top = 28.0
margin_right = 315.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="CreateClassDialog/Container/Name"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.31
text = "Name: "

[node name="LineEdit" type="LineEdit" parent="CreateClassDialog/Container/Name"]
margin_left = 77.0
margin_right = 315.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Class"

[node name="Path" type="HBoxContainer" parent="CreateClassDialog/Container"]
margin_top = 56.0
margin_right = 315.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="CreateClassDialog/Container/Path"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.31
text = "Path: "

[node name="FileEdit" parent="CreateClassDialog/Container/Path" instance=ExtResource( 10 )]
margin_left = 77.0
margin_right = 315.0
size_flags_horizontal = 3
path = "res://class.gdns"
mode = 4
file_dialog = NodePath("../../../FileDialog")

[node name="Config" type="RichTextLabel" parent="CreateClassDialog/Container"]
margin_top = 84.0
margin_right = 315.0
margin_bottom = 135.0
size_flags_vertical = 3
bbcode_enabled = true

[node name="FileDialog" type="FileDialog" parent="CreateClassDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 323.0
margin_bottom = 143.0
window_title = "Choose Location"
resizable = true
filters = PoolStringArray( "*.gdnlib ; GDNative Libraries" )

[node name="BuildLibraryDialog" type="ConfirmationDialog" parent="."]
margin_left = 298.0
margin_top = -1.0
margin_right = 748.0
margin_bottom = 482.0
window_title = "Configure Build"
resizable = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="BuildLibraryDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="BuildLibraryDialog/Container"]
margin_right = 434.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BuildLibraryDialog/Container/Header"]
margin_right = 109.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.34
custom_styles/normal = SubResource( 3 )
text = "Platform"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="BuildLibraryDialog/Container/Header"]
margin_left = 113.0
margin_right = 434.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_styles/normal = SubResource( 3 )
text = "Architectures"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platforms" type="HBoxContainer" parent="BuildLibraryDialog/Container"]
margin_top = 18.0
margin_right = 434.0
margin_bottom = 224.0
size_flags_stretch_ratio = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="BuildLibraryDialog/Container/Platforms"]
margin_right = 109.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.34
alignment = 1

[node name="Windows" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Labels"]
margin_right = 109.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )

[node name="Logo" type="TextureRect" parent="BuildLibraryDialog/Container/Platforms/Labels/Windows"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 9 )
stretch_mode = 5

[node name="Label" type="Label" parent="BuildLibraryDialog/Container/Platforms/Labels/Windows"]
margin_left = 36.0
margin_top = 12.0
margin_right = 94.0
margin_bottom = 26.0
text = "Windows"
align = 1

[node name="MacOS" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Labels"]
margin_top = 42.0
margin_right = 109.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 38 )

[node name="Logo" type="TextureRect" parent="BuildLibraryDialog/Container/Platforms/Labels/MacOS"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 8 )
stretch_mode = 5

[node name="Label" type="Label" parent="BuildLibraryDialog/Container/Platforms/Labels/MacOS"]
margin_left = 36.0
margin_top = 12.0
margin_right = 92.0
margin_bottom = 26.0
text = "Mac OSX"
align = 1

[node name="Linux" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Labels"]
margin_top = 84.0
margin_right = 109.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 38 )

[node name="Logo" type="TextureRect" parent="BuildLibraryDialog/Container/Platforms/Labels/Linux"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 6 )
stretch_mode = 5

[node name="Label" type="Label" parent="BuildLibraryDialog/Container/Platforms/Labels/Linux"]
margin_left = 36.0
margin_top = 12.0
margin_right = 70.0
margin_bottom = 26.0
text = "Linux"
align = 1

[node name="Android" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Labels"]
margin_top = 126.0
margin_right = 109.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 38 )

[node name="Logo" type="TextureRect" parent="BuildLibraryDialog/Container/Platforms/Labels/Android"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 5 )
stretch_mode = 5

[node name="Label" type="Label" parent="BuildLibraryDialog/Container/Platforms/Labels/Android"]
margin_left = 36.0
margin_top = 12.0
margin_right = 86.0
margin_bottom = 26.0
text = "Android"
align = 1

[node name="IOS" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Labels"]
margin_top = 168.0
margin_right = 109.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 38 )

[node name="Logo" type="TextureRect" parent="BuildLibraryDialog/Container/Platforms/Labels/IOS"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 7 )
stretch_mode = 5

[node name="Label" type="Label" parent="BuildLibraryDialog/Container/Platforms/Labels/IOS"]
margin_left = 36.0
margin_top = 12.0
margin_right = 58.0
margin_bottom = 26.0
text = "iOS"
align = 1

[node name="Architectures" type="VBoxContainer" parent="BuildLibraryDialog/Container/Platforms"]
margin_left = 113.0
margin_right = 434.0
margin_bottom = 206.0
size_flags_horizontal = 3
alignment = 1

[node name="Windows" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Architectures"]
margin_right = 321.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )

[node name="32" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Windows" groups=["__native_arch_buttons__"]]
margin_right = 66.0
margin_bottom = 38.0
text = "32-bit"

[node name="64" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Windows" groups=["__native_arch_buttons__"]]
margin_left = 70.0
margin_right = 136.0
margin_bottom = 38.0
pressed = true
text = "64-bit"

[node name="MacOS" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Architectures"]
margin_top = 42.0
margin_right = 321.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 38 )

[node name="64" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/MacOS" groups=["__native_arch_buttons__"]]
margin_right = 66.0
margin_bottom = 38.0
text = "64-bit"

[node name="Linux" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Architectures"]
margin_top = 84.0
margin_right = 321.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 38 )

[node name="32" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Linux" groups=["__native_arch_buttons__"]]
margin_right = 66.0
margin_bottom = 38.0
text = "32-bit"

[node name="64" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Linux" groups=["__native_arch_buttons__"]]
margin_left = 70.0
margin_right = 136.0
margin_bottom = 38.0
text = "64-bit"

[node name="Android" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Architectures"]
margin_top = 126.0
margin_right = 321.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 38 )

[node name="arm7" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Android" groups=["__native_arch_buttons__"]]
margin_right = 68.0
margin_bottom = 38.0
pressed = true
text = "armv7"

[node name="arm8" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Android" groups=["__native_arch_buttons__"]]
margin_left = 72.0
margin_right = 156.0
margin_bottom = 38.0
text = "arm64v8"

[node name="86" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Android" groups=["__native_arch_buttons__"]]
margin_left = 160.0
margin_right = 211.0
margin_bottom = 38.0
text = "x86"

[node name="86_64" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/Android" groups=["__native_arch_buttons__"]]
margin_left = 215.0
margin_right = 287.0
margin_bottom = 38.0
text = "x86-64"

[node name="IOS" type="HBoxContainer" parent="BuildLibraryDialog/Container/Platforms/Architectures"]
margin_top = 168.0
margin_right = 321.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 38 )

[node name="arm7" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/IOS" groups=["__native_arch_buttons__"]]
margin_right = 68.0
margin_bottom = 38.0
text = "armv7"

[node name="arm8" type="CheckBox" parent="BuildLibraryDialog/Container/Platforms/Architectures/IOS" groups=["__native_arch_buttons__"]]
margin_left = 72.0
margin_right = 156.0
margin_bottom = 38.0
text = "arm64v8"

[node name="Label" type="Label" parent="BuildLibraryDialog/Container"]
margin_top = 228.0
margin_right = 434.0
margin_bottom = 242.0
custom_styles/normal = SubResource( 3 )
text = "Build Options"
align = 1
valign = 2

[node name="Options" type="ScrollContainer" parent="BuildLibraryDialog/Container"]
margin_top = 246.0
margin_right = 434.0
margin_bottom = 395.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="VBox" type="VBoxContainer" parent="BuildLibraryDialog/Container/Options"]
margin_right = 434.0
size_flags_horizontal = 3

[node name="Debug" type="HBoxContainer" parent="BuildLibraryDialog/Container"]
margin_top = 399.0
margin_right = 434.0
margin_bottom = 439.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="BuildLibraryDialog/Container/Debug"]
margin_left = 136.0
margin_right = 297.0
margin_bottom = 40.0
text = "Debug Mode"
align = 1

[node name="FileDialog" type="FileDialog" parent="BuildLibraryDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 442.0
margin_bottom = 447.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteLibraryDialog" type="ConfirmationDialog" parent="."]
margin_left = 186.513
margin_top = 122.808
margin_right = 478.513
margin_bottom = 197.808
dialog_text = "Delete library \"\" and its classes?
Its source files will remain where they are."

[node name="DeleteClassDialog" type="ConfirmationDialog" parent="."]
margin_left = 186.513
margin_top = 122.808
margin_right = 478.513
margin_bottom = 197.808
dialog_text = "Delete class \"\"?
Its source files will remain where they are."

[node name="NoHeaderDialog" type="AcceptDialog" parent="."]
margin_left = 383.449
margin_top = 211.906
margin_right = 466.449
margin_bottom = 269.906
window_title = "Error!"
dialog_text = "This Library/Class has no header file to open!"

[node name="NoBuildDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Warning!"
dialog_text = "The selected language has no build script, so it can't be built."

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Build" to="." method="_on_Build_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Log" to="." method="_on_Log_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Reload" to="." method="_on_Reload_pressed"]
[connection signal="button_pressed" from="VBoxContainer/HSplitContainer/Tree" to="." method="_on_Tree_button_pressed"]
[connection signal="gui_input" from="VBoxContainer/HSplitContainer/Tree" to="." method="_on_Tree_gui_input"]
[connection signal="item_edited" from="VBoxContainer/HSplitContainer/Tree" to="." method="_on_Tree_item_edited"]
[connection signal="item_rmb_selected" from="VBoxContainer/HSplitContainer/Tree" to="." method="_on_Tree_item_rmb_selected"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/HSplitContainer/Tree" to="." method="_on_Tree_nothing_selected"]
[connection signal="timeout" from="VBoxContainer/HSplitContainer/Tree/BuildIconUpdate" to="." method="_on_BuildIconUpdate_timeout"]
[connection signal="focus_exited" from="VBoxContainer/HSplitContainer/Tree/PopupOpts" to="." method="_on_PopupOpts_focus_exited"]
[connection signal="id_pressed" from="VBoxContainer/HSplitContainer/Tree/PopupOpts" to="." method="_on_PopupOpts_id_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/CreateLib" to="." method="_on_CreateLib_pressed"]
[connection signal="about_to_show" from="CreateLibraryDialog" to="CreateLibraryDialog" method="_on_about_to_show"]
[connection signal="confirmed" from="CreateLibraryDialog" to="CreateLibraryDialog" method="_on_confirmed"]
[connection signal="item_selected" from="CreateLibraryDialog/Container/Language/OptionButton" to="CreateLibraryDialog" method="_on_Language_item_selected"]
[connection signal="path_changed" from="CreateLibraryDialog/Container/Path/FileEdit" to="CreateLibraryDialog" method="_on_FileEdit_path_changed"]
[connection signal="about_to_show" from="CreateClassDialog" to="CreateClassDialog" method="_on_about_to_show"]
[connection signal="confirmed" from="CreateClassDialog" to="CreateClassDialog" method="_on_confirmed"]
[connection signal="text_changed" from="CreateClassDialog/Container/Inherit/LineEdit" to="CreateClassDialog" method="_on_LineEdit_inherit_changed"]
[connection signal="text_changed" from="CreateClassDialog/Container/Name/LineEdit" to="CreateClassDialog" method="_on_LineEdit_name_changed"]
[connection signal="path_changed" from="CreateClassDialog/Container/Path/FileEdit" to="CreateClassDialog" method="_on_FileEdit_path_changed"]
[connection signal="file_selected" from="CreateClassDialog/FileDialog" to="CreateClassDialog" method="_on_FileDialog_file_selected"]
[connection signal="about_to_show" from="BuildLibraryDialog" to="BuildLibraryDialog" method="_on_about_to_show"]
[connection signal="confirmed" from="BuildLibraryDialog" to="BuildLibraryDialog" method="_on_confirmed"]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Windows/32" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "windows", "32" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Windows/64" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "windows", "64" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/MacOS/64" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "osx", "64" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Linux/32" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "linux", "32" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Linux/64" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "linux", "64" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Android/arm7" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "android", "armv7" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Android/arm8" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "android", "arm64v8" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Android/86" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "android", "x86" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/Android/86_64" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "android", "x86_64" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/IOS/arm7" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "ios", "armv7" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Platforms/Architectures/IOS/arm8" to="BuildLibraryDialog" method="_on_Architectures_toggled" binds= [ "ios", "arm64v8" ]]
[connection signal="toggled" from="BuildLibraryDialog/Container/Debug/CheckButton" to="." method="_on_Debug_toggled"]
[connection signal="confirmed" from="DeleteLibraryDialog" to="." method="_on_DeleteLib_pressed" binds= [ true ]]
[connection signal="confirmed" from="DeleteClassDialog" to="." method="_on_DeleteClass_pressed" binds= [ true ]]
